CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(TsunamiHySEA)

# Find MPI
FIND_PACKAGE(MPI)
IF(MPI_FOUND)
	INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
ELSE(MPI_FOUND)
	MESSAGE(FATAL_ERROR "MPI not found")
ENDIF(MPI_FOUND)

# Find CUDA
FIND_PACKAGE(CUDA)
IF(NOT CUDA_FOUND)
	MESSAGE(FATAL_ERROR "CUDA not found")
ENDIF(NOT CUDA_FOUND)
INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})

# Find NetCDF
FIND_PACKAGE(NetCDF)
IF(NOT NETCDF_FOUND)
	MESSAGE(FATAL_ERROR "NetCDF not found")
ENDIF(NOT NETCDF_FOUND)
INCLUDE_DIRECTORIES(${NETCDF_INCLUDES})

# Find Threads
SET(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
FIND_PACKAGE(Threads)
IF(NOT Threads_FOUND)
	MESSAGE(FATAL_ERROR "Threads not found")
ENDIF(NOT Threads_FOUND)

# Set the build type to Release
IF (NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE Release CACHE STRING "Choose build type (Debug, Release)" FORCE)
ENDIF (NOT CMAKE_BUILD_TYPE)

# Build TsunamiHySEA
ADD_SUBDIRECTORY(GPU)

ADD_EXECUTABLE(NH-HySEA ShallowWater.cxx)
TARGET_LINK_LIBRARIES(NH-HySEA GPU)

